# rarecell

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: cns-bundle-publish-runbook.md  recommender-comparison.md
docs/superpowers/plans/: 2026-05-20-rarecell-advisor-agent.md  2026-05-20-rarecell-cli-and-mcp.md  2026-05-20-rarecell-foundation.md  2026-05-20-rarecell-mcp-knowledge.md  2026-06-01-cns-reference-build-pipeline.md  2026-06-01-cns-runtime-progressive-isolation.md  2026-06-02-cns-target-resolution.md
docs/superpowers/specs/: 2026-05-20-rarecell-agentic-isolation-design.md  2026-06-01-progressive-taxonomy-classification-design.md  2026-06-02-cns-target-resolution-design.md
examples/: README.md  build_cns_reference_colab.ipynb  build_cns_reference_colab.py  colab_demo.ipynb  colab_demo.py
scripts/: benchmark_isolation.py  recommender_comparison.py
scripts/build_cns_reference/: __init__.py  __main__.py  annotate_abc.py  annotate_s3.py  build.py  discover.py  labels.py  sample.py  stream.py  train.py
scripts/build_cns_reference/data/: siletti_table_s3.csv
tests/: conftest.py  test_benchmark_isolation.py  test_recommender_comparison.py
tests/build_reference/: test_annotate_abc.py  test_annotate_s3.py  test_build.py  test_discover.py  test_format.py  test_integration.py  test_labels.py  test_sample.py  test_stream.py  test_train.py
tests/fixtures/: make_synthetic.py  test_synthetic_smoke.py
tests/integration/: test_claude_recommender_e2e.py  test_pbmc3k.py  test_replay_determinism.py  test_synthetic_end_to_end.py
