[project]
name = "rarecell-workspace"
version = "0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
  "tests",
  "packages/rarecell/tests",
  "packages/rarecell-mcp-knowledge/tests",
  "packages/rarecell-mcp/tests",
]
norecursedirs = [".venv", ".ruff_cache"]
# importlib mode avoids basename-collision errors between same-named test files
# across packages (e.g., packages/rarecell/tests/test_errors.py and
# packages/rarecell-mcp-knowledge/tests/test_errors.py).
addopts = "--import-mode=importlib"
markers = [
  "integration: end-to-end tests that fetch external data",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
