[project]
name = "rarecell-workspace"
version = "0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# Notebook source files (jupytext py:percent) have per-cell imports
# below the file head by design; a bare expression at the end of a cell
# is how notebooks render values; Unicode like × is common in notebooks.
"examples/*.py" = ["E402", "B018", "RUF001", "RUF003"]
"examples/*.ipynb" = ["E402", "B018", "RUF001", "RUF003"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
  "tests",
  "packages/rarecell/tests",
  "packages/rarecell-mcp-knowledge/tests",
  "packages/rarecell-mcp/tests",
]
norecursedirs = [".venv", ".ruff_cache"]
# importlib mode avoids basename-collision errors between same-named test files
# across packages (e.g., packages/rarecell/tests/test_errors.py and
# packages/rarecell-mcp-knowledge/tests/test_errors.py).
addopts = "--import-mode=importlib -m 'not integration'"
markers = [
  "integration: end-to-end tests that fetch external data",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupytext>=1.19.3",
    "nbformat>=5.10.4",
    "remotezip>=0.12.3",
]
build-reference = [
    "httpx>=0.27",
]
